# fast-text-find

./: CMakeLists.txt  Make.bat  findcore.cc  findcore.h  main.cc  resource.rc
src/: findcore.cc  findcore.h  main.cc  resource.h  resource.rc
